# dbiclient

./: .gitignore  README.md
.github/: copilot-instructions.md
assets/: demo.db  demo.tape  demo_vimrc.vim  query.tape  sqlgen.tape  tables.tape
autoload/: dbiclient.vim
autoload/dbiclient/: funclib.vim
autoload/vital/: dbiclient.vital
autoload/vital/_dbiclient/: Stream.vim
autoload/vital/_dbiclient/System/: Filepath.vim
plugin/: dbiclient.vim
rplugin/perl/: DBIxEncoding.pm  socket.pl
rplugin/rust/socket/: Cargo.toml
rplugin/rust/socket/src/: cache.rs  encoding.rs  exec_sql.rs  handler.rs  logging.rs  main.rs  server.rs
rplugin/rust/socket/src/db/: factory.rs  mod.rs  mysql.rs  odbc.rs  oracle.rs  postgres.rs  sqlite.rs
